fix: close gap under scroll prompt

--- a/components/overlay/Overlay.module.sass
+++ b/components/overlay/Overlay.module.sass
@@ -207,7 +207,7 @@
 // ── Scroll Prompt ───────────────────────────────────────────────────────────
 .scrollPromptContainer
   position: absolute
-  bottom: 5vh
+  bottom: 1vh
   left: 50%
   transform: translateX(-50%)
   display: flex
